--- a/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/templates/helloworld.html
+++ b/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/templates/helloworld.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Thymeleaf</title>
+
+    <!-- reference CSS file -->
+    <link rel="stylesheet" th:href="@{/css/demo.css}"/>
+
 </head>
 <body>
-    <p th:text="'Time on the server is ' + ${theDate}"/>
+    <p th:text="'Time on the server is ' + ${theDate}" class="funny"/>
 </body>
 </html>
