read form data using spring MVC

--- a/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/templates/helloworld.html
+++ b/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/templates/helloworld.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head>
-    <meta charset="UTF-8">
-    <title>Thymeleaf</title>
+  <meta charset="UTF-8">
+  <title>Thymeleaf</title>
 
-    <!-- reference CSS file -->
-    <link rel="stylesheet" th:href="@{/css/demo.css}"/>
+  <!-- reference CSS file -->
+  <link rel="stylesheet" th:href="@{/css/demo.css}"/>
 
 </head>
 <body>
-    <p th:text="'Time on the server is ' + ${theDate}" class="funny"/>
+  Hello World of Spring!
+  <br><br>
+  student name: <span th:text="${param.studentName}"/>
 </body>
 </html>
