--- a/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/templates/helloworld.html
+++ b/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/templates/helloworld.html
@@ -11,6 +11,10 @@
 <body>
   Hello World of Spring!
   <br><br>
+
   student name: <span th:text="${param.studentName}"/>
+  <br><br>
+
+  The message: <span th:text="${message}"/>
 </body>
 </html>
