--- a/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/templates/student-confirmation.html
+++ b/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/templates/student-confirmation.html
@@ -9,6 +9,8 @@
   <h3>Student Confirmation Page</h3>
 
   The student is confirmed: <span th:text="${student.firstName} + ' ' + ${student.lastName}"/>
+  <br><br>
 
+  Country: <span th:text="${student.country}"/>
 </body>
 </html>
