--- a/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/templates/student-form.html
+++ b/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/templates/student-form.html
@@ -14,14 +14,18 @@
     <br><br>
     Country:
     <select th:field="*{country}">
-      <option th:each="tempCountry : ${countries}" th:value="${tempCountry}" th:text="${tempCountry}" />
+      <option th:each="tempCountry : ${countries}"
+              th:value="${tempCountry}"
+              th:text="${tempCountry}" />
     </select>
     <br><br>
 
     Favorite Programming Language:
-    <input type="radio" th:field="*{favoriteLanguage}" th:value="Go">Go</input>
-    <input type="radio" th:field="*{favoriteLanguage}" th:value="Java">Java</input>
-    <input type="radio" th:field="*{favoriteLanguage}" th:value="Python">Python</input>
+    <input type="radio"
+           th:field="*{favoriteLanguage}"
+           th:each="tempLang : ${languages}"
+           th:value="${tempLang}"
+           th:text="${tempLang}"/>
     <br><br>
     <input type="submit" value="Submit"/>
 
