--- a/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/templates/student-confirmation.html
+++ b/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/templates/student-confirmation.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https:www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Student confirmation page</title>
+  <title>Student Confirmation Page</title>
 </head>
 
 <body>
-  <h3>Student Confirmation Page</h3>
+<h3>Student Confirmation Page</h3>
 
-  The student is confirmed: <span th:text="${student.firstName} + ' ' + ${student.lastName}"/>
-  <br><br>
+The student is confirmed: <span th:text="|${student.firstName} ${student.lastName}|"/>
+<br><br>
 
-  Country: <span th:text="${student.country}"/>
-  <br><br>
+Country: <span th:text="${student.country}"/>
+<br><br>
 
-  Favorite Language: <span th:text="${student.favoriteLanguage}"/>
+Favorite Language:
+<span th:text="${student.favoriteLanguage}"/>
+
+<br><br>
+
+Favorite Operating Systems:
+<ul>
+  <li th:each="tempSystem : ${student.favoriteOs}" th:text="${tempSystem}"></li>
+</ul>
+<br><br>
+
 </body>
 </html>
