--- a/06-spring-boot-spring-mvc/validationDemo/src/main/resources/templates/customer-form.html
+++ b/06-spring-boot-spring-mvc/validationDemo/src/main/resources/templates/customer-form.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <i>Fill out the form (*) means required.</i>
+    <i>Fill out the form. Asterisk (*) means required.</i>
     <br><br>
 
     <form th:action="@{/processForm}"
@@ -21,7 +21,7 @@
                            th:field="*{firstName}"/>
         <br><br>
 
-        Last name: <input type="text"
+        Last name (*): <input type="text"
                           th:field="*{lastName}"/>
 
 <!--        show error message (if present)-->
@@ -30,7 +30,7 @@
               class="error">
         </span>
         <br><br>
-        <input type="submit" value="submit"/>
+        <input type="submit" value="Submit"/>
     </form>
 </body>
 </html>
