--- a/06-spring-boot-spring-mvc/validationDemo/src/main/resources/templates/customer-confirmation.html
+++ b/06-spring-boot-spring-mvc/validationDemo/src/main/resources/templates/customer-confirmation.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     The customer is confirmed: <span th:text="${customer.firstName + ' ' + customer.lastName}"/>
+    <br><br>
+    Free Passes: <span th:text="${customer.freePasses}"/>
 </body>
 </html>
