--- a/06-spring-boot-spring-mvc/validationDemo/src/main/resources/templates/customer-form.html
+++ b/06-spring-boot-spring-mvc/validationDemo/src/main/resources/templates/customer-form.html
@@ -24,12 +24,23 @@
         Last name (*): <input type="text"
                           th:field="*{lastName}"/>
 
+        <br><br>
 <!--        show error message (if present)-->
         <span th:if="${#fields.hasErrors('lastName')}"
               th:errors="*{lastName}"
               class="error">
         </span>
+
         <br><br>
+
+        Free passes: <input type="text" th:field="*{freePasses}"/>
+
+        <!-- Add error message (if present) -->
+        <span th:if="${#fields.hasErrors('freePasses')}"
+              th:errors="*{freePasses}"
+              class="error">
+        </span>
+
         <input type="submit" value="Submit"/>
     </form>
 </body>
