--- a/06-spring-boot-spring-mvc/validationDemo/src/main/resources/templates/customer-form.html
+++ b/06-spring-boot-spring-mvc/validationDemo/src/main/resources/templates/customer-form.html
@@ -41,6 +41,14 @@
               class="error">
         </span>
 
+        Postal code: <input type="text" th:field="*{postalCode}"/>
+
+        <!-- Add error message (if present) -->
+        <span th:if="${#fields.hasErrors('postalCode')}"
+              th:errors="*{postalCode}"
+              class="error">
+        </span>
+
         <input type="submit" value="Submit"/>
     </form>
 </body>
