--- a/06-spring-boot-spring-mvc/validationDemo/src/main/resources/templates/customer-confirmation.html
+++ b/06-spring-boot-spring-mvc/validationDemo/src/main/resources/templates/customer-confirmation.html
@@ -10,5 +10,7 @@
     Free Passes: <span th:text="${customer.freePasses}"/>
     <br><br>
     Postal Code: <span th:text="${customer.postalCode}"/>
+    <br><br>
+    Course Code: <span th:text="${customer.courseCode}"/>
 </body>
 </html>
