--- a/06-spring-boot-spring-mvc/validationDemo/src/main/resources/templates/customer-form.html
+++ b/06-spring-boot-spring-mvc/validationDemo/src/main/resources/templates/customer-form.html
@@ -40,15 +40,32 @@
               class="error">
         </span>
         <br><br>
-        Postal code: <input type="text" th:field="*{postalCode}"/>
 
+        Postal code: <input type="text" th:field="*{postalCode}"/>
         <!-- Add error message (if present) -->
         <span th:if="${#fields.hasErrors('postalCode')}"
               th:errors="*{postalCode}"
               class="error">
         </span>
         <br><br>
+
+        Course code: <input type="text" th:field="*{courseCode}"/>
+        <!-- Add error message (if present) -->
+        <span th:if="${#fields.hasErrors('courseCode')}"
+              th:errors="*{courseCode}"
+              class="error">
+        </span>
+        <br><br>
+
         <input type="submit" value="Submit"/>
     </form>
 </body>
 </html>
+
+
+
+
+
+
+
+
