--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Employee Directory</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 
 <div class="container">
     <h3>Employee Directory</h3>
-    <hr>`
+    <hr>
 
-<!--    add a button-->
+    <!--    add a button-->
     <a th:href="@{/employees/showFormForAdd}"
-        class="btn btn-primary btn-sm mb-3"
+       class="btn btn-primary btn-sm mb-3"
     >
         Add Employee
     </a>
@@ -25,6 +26,7 @@
             <th>Last Name</th>
             <th>Email</th>
             <th>Action</th>
+            <th>Delete</th>
         </tr>
         </thead>
 
@@ -34,19 +36,29 @@
             <td th:text="${tempEmployee.lastName}"></td>
             <td th:text="${tempEmployee.email}"></td>
 
-<!--            Add update button -->
             <td>
+<!--                Add update button/link-->
                 <a th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"
-                class="btn btn-info btn-sm">
+                   class="btn btn-info btn-sm">
                     Update
                 </a>
+
+<!--                Add "delete" button/link-->
+                <a th:href="@{/employees/delete(employeeId=${tempEmployee.id})}"
+                   class="btn btn-danger btn-sm"
+                   onclick="if (!(confirm('Are you sure you want to delete this employee?'))) return false">
+                    Delete
+                </a>
             </td>
+
         </tr>
         </tbody>
     </table>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
